Simplified several scripts for Kalman analys, started analysing the covariance of interferogram

--- a/docs/stack_model.tex
+++ b/docs/stack_model.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \usepackage{hyperref}
 \usepackage{amsmath}
-\usepackage{../../Texts/macros}
+
 
 
 \title{Linear Systems to Describe Interferogram Stacks}
@@ -202,5 +202,5 @@ The Kalman filter can be used to obtain posterior estimates of the displacement 
 With this method, a new SLC image can be used to estimate updated displacement model parameter "online" using the previously estimated parameters and the stack formed with~\autoref{eq:stack}.
 \section{Correlation Model}
 \bibliographystyle{ieeetr}
-\bibliography{../../Texts/library}
+\bibliography{./bibliography/library}
 \end{document}
